--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="womens">Womens</string>
     <string name="co_ed">Co-ed</string>
     <string name="next">NEXT</string>
+    <string name="i_am_a">I am a :</string>
+    <string name="beginner">Beginner</string>
+    <string name="baller">Baller</string>
+    <string name="finish">FINISH</string>
 </resources>
